objects/Pre_Approval_Quote_Pricebook_Exception__mdt/Pre_Approval_Quote_Pricebook_Exception__mdt.object-meta.xml
<CustomObject>
    <label>Pre Approval Quote Pricebook Exception</label>
    <pluralLabel>Pre Approval Quote Pricebook Exceptions</pluralLabel>
</CustomObject>