objects/Pre_Approval_Quote_Pricebook_Exception__mdt/fields/Pre_Approval_Quote_Messaging__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Quote_Messaging__c</fullName>
    <label>Pre Approval Quote Messaging</label>
    <referenceTo>Pre_Approval_Quote_Messaging__mdt</referenceTo>
    <relationshipLabel>Pre Approval Quote Pricebook Exceptions</relationshipLabel>
    <relationshipName>Pre_Approval_Quote_Pricebook_Exceptions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>