objects/Pre_Approval_Quote_Pricebook_Exception__mdt/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <description>Put the &apos;Name&apos; of the Pricebook here to exclude from this rule running.</description>
    <inlineHelpText>Put the &apos;Name&apos; of the Pricebook here to exclude from this rule running.</inlineHelpText>
    <label>Pricebook Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>