objects/Pre_Approval_Quote_Pricebook_Exception__mdt/fields/PricebookId__c.field-meta.xml
<CustomField>
    <fullName>PricebookId__c</fullName>
    <label>PricebookId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>